[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfamilysafety2"
version = "1.0.0"
description = "Python library for Microsoft Family Safety — manage children's Windows screen time"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["pyfamilysafety2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
