[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homeassistant-family-safety"
version = "1.0.0"
description = "Home Assistant custom integration for Microsoft Family Safety"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/family_safety"]
